--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     
     <header class="">
-      <h1>Practica DOM</h1>
+      <h1>Practica DOM git</h1>
     </header>
     
     <div id="menu">
