--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <a href="#section3">Countdown</a>
         <a href="#section4">Seccion 4</a>
         <a href="#section5">Seccion 5</a>
+        <a href="#section5">Seccion 6</a>
+        <a href="#section5">Seccion 7</a>
+        <a href="#section5">Seccion 8</a>
+        <a href="#section5">Seccion 9</a>
+        <a href="#section5">Seccion 10</a>
       </ul>
     </div>
     
@@ -76,6 +81,21 @@
         </section>
         <section id="section5">
           <h1>Seccion 5</h1>
+        </section>
+        <section id="section5">
+          <h1>Seccion 6</h1>
+        </section>
+        <section id="section5">
+          <h1>Seccion 7</h1>
+        </section>
+        <section id="section5">
+          <h1>Seccion 8</h1>
+        </section>
+        <section id="section5">
+          <h1>Seccion 9</h1>
+        </section>
+        <section id="section5">
+          <h1>Seccion 10</h1>
         </section>
       </div>
       
