--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#section3">Countdown</a>
         <a href="#section4">Contenido responsive</a>
         <a href="#section5">Deteccion de dispositivos</a>
-        <a href="#section5">Seccion 6</a>
+        <a href="#section5">Deteccion de conexion</a>
         <a href="#section5">Seccion 7</a>
         <a href="#section5">Seccion 8</a>
         <a href="#section5">Seccion 9</a>
@@ -83,10 +83,11 @@
         
         <section id="section5">
           <h2>Deteccion de dispositivos</h2>
+          <div id="userAgent"></div>
         </section>
         
         <section id="section5">
-          <h2>Seccion 6</h2>
+          <h2>Deteccion de conexion</h2>
         </section>
         <section id="section5">
           <h2>Seccion 7</h2>
