--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <a href="#section3">Countdown</a>
         <a href="#section4">Contenido responsive</a>
         <a href="#section5">Deteccion de dispositivos</a>
-        <a href="#section5">Deteccion de conexion</a>
-        <a href="#section5">Seccion 7</a>
-        <a href="#section5">Seccion 8</a>
-        <a href="#section5">Seccion 9</a>
-        <a href="#section5">Seccion 10</a>
+        <a href="#section6">Deteccion de conexion</a>
+        <a href="#section7">Geolocalisacion</a>
+        <a href="#section8">Filtrar busqueda</a>
+        <a href="#section9">Sorteo digital</a>
+        <a href="#section10">Seccion 10</a>
       </ul>
     </div>
     
@@ -86,19 +86,20 @@
           <div id="userAgent"></div>
         </section>
         
-        <section id="section5">
+        <section id="section6">
           <h2>Deteccion de conexion</h2>
         </section>
-        <section id="section5">
-          <h2>Seccion 7</h2>
+        <section id="section7">
+          <h2>Geolocalisacion</h2>
         </section>
-        <section id="section5">
-          <h2>Seccion 8</h2>
+        <section id="section8">
+          <h2>Filtrar busqueda</h2>
         </section>
-        <section id="section5">
-          <h2>Seccion 9</h2>
+        <section id="section9">
+          <h2>Sorteo Digital</h2>
+          <div id="sorteoBox"></div>
         </section>
-        <section id="section5">
+        <section id="section10">
           <h2>Seccion 10</h2>
         </section>
       </div>
@@ -117,3 +118,5 @@
     <script src="js/app.js" type="module"></script>
   </body>
 </html>
+
+
