--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#section7">Geolocalisacion</a>
         <a href="#section8">Filtrar busqueda</a>
         <a href="#section9">Sorteo digital</a>
-        <a href="#section10">Seccion 10</a>
+        <a href="#section10">web cam</a>
       </ul>
     </div>
     
@@ -100,7 +100,8 @@
           <div id="sorteoBox"></div>
         </section>
         <section id="section10">
-          <h2>Seccion 10</h2>
+          <h2>web cam</h2>
+          <video id="stream"></video>
         </section>
       </div>
       
