--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="contenedor" data-dark>
       <div class="sections">
         <section id="section1">
-          <h2>Reloj Digitar y Alarma sonora</h2>
+          <h2>Reloj Digitar y Alarma sonora jjjjj</h2>
           
           <div class="timer-main">
             <br>
